Styled links in Admin Login and Forgot Pwd

--- a/templates/admin/forgot_password.html
+++ b/templates/admin/forgot_password.html
@@ -1,5 +1,9 @@
 {% extends "base.html" %}
 
+{% block head %}
+<link rel="stylesheet" href="{{ url_for('static', filename='login.css') }}">
+{% endblock %}
+
 {% block content %}
 <div class="auth-container">
     <div class="card">
@@ -17,7 +21,8 @@
             {{ form.submit(class="btn btn-primary", style="width:100%") }}
 
             <div style="margin-top: 1rem; text-align: center;">
-                <a href="{{ url_for('admin.login') }}" style="font-size: 0.9rem;">Back to Login</a>
+                <a href="{{ url_for('admin.login') }}" class="forgotpassword" style="font-size: 0.9rem;">Back to
+                    Login</a>
             </div>
         </form>
     </div>
