--- a/templates/base.html
+++ b/templates/base.html
@@ -12,6 +12,7 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
         crossorigin="anonymous">
+    {% block head %}{% endblock %}
 </head>
 
 <body style="display: flex; flex-direction: column; min-height: 100vh;">
