Fixed Timezone Issues and Search

--- a/templates/admin/manage_election.html
+++ b/templates/admin/manage_election.html
@@ -518,7 +518,7 @@
                     }
 
                     // Initialize Search for all tables
-                    setupTableSearch('electorsTable', 'electorSearch'); // ID order swapped in previous call
+                    setupTableSearch('electorSearch', 'electorsTable'); // Fixed order
                     setupTableSearch('revoteSearch', 'revoteTable');
                     setupTableSearch('nominationsSearch', 'nominationsTable');
 
