--- a/templates/base.html
+++ b/templates/base.html
@@ -44,8 +44,7 @@
 
     <footer class="site-footer">
         <h5>Votely</h5>
-        <p style="margin: 0.2rem 0; font-size: 0.9rem;">Creators: Praveen Kumar and Karthikeyan</p>
-        <p style="margin: 0; font-size: 0.9rem;">Support: Krishnapriyan</p>
+        <p style="margin: 0.2rem 0; font-size: 0.9rem;">Creators: Praveen Kumar (aka JavaBool) <br> Karthikeyan</p>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
